[gd_scene load_steps=4 format=3 uid="uid://dslm61j6mwibn"]

[ext_resource type="Texture2D" uid="uid://d010jcospqex4" path="res://art/UI/Banners/Carved_9Slides.png" id="1_73r8c"]
[ext_resource type="Script" uid="uid://qxq1wjt7s84o" path="res://inventory/inventory_item_ui.gd" id="1_twlid"]
[ext_resource type="Texture2D" uid="uid://cp7oapq7yws3d" path="res://art/Deco/G_Idle 64 X 64.png" id="3_twlid"]

[node name="InventoryItemUI" type="Panel"]
custom_minimum_size = Vector2(50, 50)
offset_right = 50.0
offset_bottom = 50.0
mouse_default_cursor_shape = 2
script = ExtResource("1_twlid")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_73r8c")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -56.0
offset_right = 39.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_twlid")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = -19.0
offset_top = 25.0
offset_right = 45.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "9782"
horizontal_alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
